# ChangeLog for dev-lisp/cl-osicat
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cl-osicat/ChangeLog,v 1.4 2004/05/09 14:56:42 dholm Exp $

*cl-osicat-0.3.7 (09 May 2004)

  09 May 2004; David Holm <dholm@gentoo.org> cl-osicat-0.3.7.ebuild:
  Added to ~ppc.

  23 Mar 2004; <mkennedy@gentoo.org> :
  New upstream minor version

*cl-osicat-0.3.3-r1 (12 Feb 2004)

  12 Feb 2004; <mkennedy@gentoo.org> cl-osicat-0.3.3-r1.ebuild:
  Cleanup for eclass changes.

*cl-osicat-0.3.3 (21 Nov 2003)

  21 Nov 2003; <mkennedy@gentoo.org> cl-osicat-0.3.3.ebuild, metadata.xml:
  initial import. ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
